<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/themes" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Header3"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/themes_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_menu_divider_width"
                android:background="?attr/scDividerColor" />

            <com.kenkeremath.mtgcounter.view.ThemeItemView
                android:id="@+id/light_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:scTheme="@style/LightTheme"
                app:label="@string/theme_light" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_menu_divider_width"
                android:background="?attr/scDividerColor" />

            <com.kenkeremath.mtgcounter.view.ThemeItemView
                android:id="@+id/pink_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:scTheme="@style/PinkTheme"
                app:label="@string/theme_pink" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_menu_divider_width"
                android:background="?attr/scDividerColor" />

            <TextView
                style="@style/Header3"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/themes_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.kenkeremath.mtgcounter.view.ThemeItemView
                android:id="@+id/dark_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:scTheme="@style/DarkTheme"
                app:label="@string/theme_dark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_menu_divider_width"
                android:background="?attr/scDividerColor" />

            <com.kenkeremath.mtgcounter.view.ThemeItemView
                android:id="@+id/mox_emerald_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:scTheme="@style/MoxEmerald"
                app:label="@string/theme_mox_emerald" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_menu_divider_width"
                android:background="?attr/scDividerColor" />

            <com.kenkeremath.mtgcounter.view.ThemeItemView
                android:id="@+id/lotus_petal_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:scTheme="@style/LotusPetal"
                app:label="@string/theme_lotus_petal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_menu_divider_width"
                android:background="?attr/scDividerColor" />

            <com.kenkeremath.mtgcounter.view.ThemeItemView
                android:id="@+id/aether_hub_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:scTheme="@style/Aetherhub"
                app:label="@string/theme_aetherhub" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_menu_divider_width"
                android:background="?attr/scDividerColor" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
