<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_padding"
            android:src="@mipmap/ic_launcher" />

        <TextView
            style="@style/Header1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>
    </LinearLayout>

    <Button
        android:id="@+id/reset_game_button"
        style="@style/StartGameButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/start_game_button_height"
        android:text="@string/reset_game"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/exit_game_button"
        style="@style/StartGameButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/start_game_button_height"
        android:text="@string/exit_game"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/keep_screen_awake_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setup_section_top_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/setup_padding_horizontal"
            app:layout_constraintTop_toBottomOf="@id/tabletop_container">

            <CheckBox
                android:id="@+id/keep_screen_awake_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keep_screen_awake" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hide_navigation_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/setup_padding_horizontal"
            app:layout_constraintTop_toBottomOf="@id/keep_screen_awake_container">

            <CheckBox
                android:id="@+id/hide_navigation_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hide_navigation" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>